--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <title></title>
   <meta charset="utf-8">
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
 </head>
 
 <body>
